--- a/css/styles.css
+++ b/css/styles.css
@@ -122,9 +122,17 @@ color: var(--accent-color);
 
 /* Hero */
 .hero {
-    background-color: var(--main-color);
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+   
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     text-align: center;
     padding: 188px 0;
+    
 
 }
 .hero-title {    
@@ -266,8 +274,38 @@ text-align: center;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--primery-brend);   
+    color: var(--primery-brend); 
+}
+.footer-name {
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 1.5; 
+    letter-spacing: 0.02em;
     
+}
+.footer-social {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;      
+    max-width: 208px;
+    outline: 2px solid teal;
+}
+.social-list {
+    display: flex;
+    justify-content: space-between;
+    max-width: 208px;
+    gap: 16px;
+      
+}
+.social-link-item-link {
+    display: block;    
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--primery-brend);
+}
+.social-list-icon-footer {
+    fill: var(--light-mode);
 }
 /* Button */
 .button {
@@ -328,8 +366,13 @@ text-align: center;
     row-gap: 48px;
     /* background-color: teal;     */
 }
-.flex-element-list {     
+.flex-element-list { 
     width: calc((100% - 48px) / 3);    
+}
+.flex-element-list:hover,
+.flex-element-list:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 .flex-element {    
     padding: 32px 16px;
