--- a/css/styles.css
+++ b/css/styles.css
@@ -363,7 +363,7 @@ height: 40px;
 }
 .footer-name {
     color: var(--color-for-theme-dark);
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5; 
     letter-spacing: 0.02em;
