--- a/css/styles.css
+++ b/css/styles.css
@@ -53,11 +53,12 @@ padding: 120px 0;
 .header-container {
     display: flex;
     align-items: center;   
-    
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-header {   
     border-bottom: 1px solid #E7E9FC;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-nav {
     display: flex;
@@ -124,15 +125,13 @@ color: var(--accent-color);
 }
 
 /* Hero */
-.hero {
+.hero {    
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-   
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    
     text-align: center;
     padding: 188px 0;
     background-size: cover;
@@ -148,8 +147,8 @@ color: var(--accent-color);
         display: flex;
         margin-left: auto;
         margin-right: auto;
-}
 
+}
 .modal-btn {
         font-family: inherit;
         font-weight: 500;
@@ -182,17 +181,6 @@ color: var(--accent-color);
     gap: 24px;
     width: 1128px;
 }
-.advantages-icons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: var(--light-mode);
-    border-radius: 4px;
-    margin-bottom: 8px;
-    fill: var(--accent-color);
-}
-
 .feacher-items {
     width: calc((100% - 72px) / 4);
 }
@@ -202,15 +190,22 @@ color: var(--accent-color);
     line-height: 1.2;   
     letter-spacing: 0.02em;
     color: var(--main-color);
-    margin-bottom: 8px;
-    
+    margin-bottom: 8px;    
 }
 .feacher-discr {
     font-size: 16px;
     line-height: 1.5;    
     letter-spacing: 0.02em;
-    color: var(--text-color);
-   
+    color: var(--text-color);   
+}
+.features-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: var(--light-mode);
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
 /* What are we doing */
 .card-set {
@@ -236,15 +231,11 @@ flex-basis: calc((100% - var(--indent)* var(--items)-1)/ var(--items));
     gap: 24px;
 }
 /* Our team */
-
 .our-team {
     background-color: var(--light-mode);    
 }
-/* .team-set {
-    display: block;
-} */
 .name-role {
-    padding-top: 32px;
+    padding: 32px 16px;    
 }
 .team-name {
 text-align: center;
@@ -252,63 +243,63 @@ margin-bottom: 8px;
 }
 .team-discr {
 text-align: center;
+margin-bottom: 8px;
 }
 .our-team-list {
-    display: flex;    
-    width: calc((100% - 72px) / 4);
-    flex-wrap: wrap;
-    gap: var(--indent);
-    --items: 4;
+    --items: 4;    
 }
 .team-cards {
     background:var(--color-for-theme-dark);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;       
+    border-radius: 0px 0px 4px 4px;        
 }
-.team-cards-social-icons {
-    padding: 32px 0;          
-} 
-.team-cards-social-list {
-display: flex;
-justify-content: center;
-gap: 24px;
+.team-icon-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
-.team-cards-social-list-li {
-width: 40px;
-height: 40px;
+.team-icon-items {
+    width: 40px;
+    height: 40px;
 }
-.team-cards-social-link-item-link {
+.team-icon-link {
     width: 100%;
     height: 100%;
     background-color: var(--primery-brend);
     border-radius: 50%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;    
 }
-.team-cards-social-link-item-link:hover,
-.team-cards-social-link-item-link:focus {
+.team-icon-link:hover,
+.team-icon-link:focus {
     background-color: var(--accent-color);
+}
+.team-icon-link-svg {
+    fill: var(--light-mode);
 }
 /* Customers */
 .customers-work-title {
     font-weight: 700;
-        font-size: 36px;
-        line-height: 1.1;
-        text-align: center;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        color: var(--main-color);
-        margin-bottom: 72px;
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--main-color);
+    margin-bottom: 72px;
 }
+
 .customers-list {
     display: flex;
     gap: 24px;
 }
+
 .customers-list-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
 }
+
 .customers {
     width: 100%;
     height: 100%;
@@ -319,11 +310,13 @@ height: 40px;
     justify-content: center;
     color: var(--light-slate);
 }
+
 .customers:hover,
 .customers:focus {
     border-color: var(--accent-color);
     color: var(--accent-color);
 }
+
 .customers-icons {
     fill: currentColor;
 }
@@ -337,22 +330,13 @@ height: 40px;
     margin-bottom: 16px;
     /* outline: 2px solid teal; */
 }
-.footer-items {
-    display: flex;
-    align-items: baseline;
-}
-.footer-descr { 
-    font-weight: 500;   
+.footer-descr {    
     font-size: 16px;
     line-height: 1.5;      
     letter-spacing: 0.02em;
     color: var(--light-mode);
     max-width: 264px;
 }
-.footer-logo-descr {
-    margin-right: 120px;
-}
-
 .logo-part-dark {
     color: var(--light-mode);
 }
@@ -364,55 +348,50 @@ height: 40px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--primery-brend); 
+    color: var(--primery-brend);      
 }
-.footer-name {
-    color: var(--color-for-theme-dark);
+.left-footer {
+    margin-right: 120px;
+}
+.rihgt-footer
+.social-media {    
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.5; 
+    line-height: 1.5;        
     letter-spacing: 0.02em;
+    color: var(--color-for-theme-dark);
     margin-bottom: 16px;
-    
 }
-.footer-social {
+.footer-list {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;      
-    max-width: 208px;
-    outline: 2px solid teal;
+    gap: 16px;    
 }
-.social-list {
-    display: flex;
-    justify-content: space-between;
-    max-width: 208px;
-    gap: 16px;
-      
-}
-.social-link-item-link {
-    display: flex;    
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: var(--primery-brend);
-    align-items: center;
-    justify-content: center;
-    fill: var(--light-mode);
-}
-.social-link-item-link:hover,
-.social-link-item-link:focus {
-background-color: var(--green);
-}
-.social-list-li {
+.footer-items {
     width: 40px;
     height: 40px;
 }
-.social-list-icon-footer {
-    fill: var(--light-mode);
-
-   
-    
+.social-icons {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primery-brend);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.social-icons:hover,
+.social-icons:focus {
+background-color: var(--green);
+}
+.icons {
+    fill: var(--light-mode);
+}
+.footer-container {
+    display: flex;
+    align-items: baseline;
+
+}
+
 /* Button */
 .button {
     font-weight: 500;
@@ -455,13 +434,7 @@ background-color: var(--green);
     overflow: hidden;
 }
 /* Portfolio */
-/* .portfolio-container{
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-} */
+
 .section-portfolio {
     padding: 96px 0 120px;
 }
@@ -470,36 +443,17 @@ background-color: var(--green);
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    /* background-color: teal;     */
 }
-.flex-element-list { 
+   
+.flex-element-list {     
     width: calc((100% - 48px) / 3);    
-}
-.flex-element-list:hover,
-.flex-element-list:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
 }
 .flex-element {    
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
-.flex-element-items {
-    display: block;
-}
-.flex-element-items:hover,
-.flex-element-items:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
 
-/* .flex-element:nth-child(3n) {
-    margin-right: 0;
-}
-.flex-element:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-} */
 .subtitle {
     font-weight: 500;
     font-size: 20px;
