--- a/css/styles.css
+++ b/css/styles.css
@@ -52,13 +52,13 @@ padding: 120px 0;
 /* Header */
 .header-container {
     display: flex;
-    align-items: center;   
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    align-items: center;     
 }
 .page-header {   
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-nav {
     display: flex;
@@ -235,7 +235,7 @@ flex-basis: calc((100% - var(--indent)* var(--items)-1)/ var(--items));
     background-color: var(--light-mode);    
 }
 .name-role {
-    padding: 32px 16px;    
+    padding: 32px 0;    
 }
 .team-name {
 text-align: center;
@@ -444,9 +444,14 @@ background-color: var(--green);
     column-gap: 24px;
     row-gap: 48px;
 }
+.flex-element-list:hover,
+.flex-element-list:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
    
 .flex-element-list {     
-    width: calc((100% - 48px) / 3);    
+    width: calc((100% - 48px) / 3); 
+    display: block;
 }
 .flex-element {    
     padding: 32px 16px;
