--- a/css/styles.css
+++ b/css/styles.css
@@ -444,15 +444,20 @@ background-color: var(--green);
     column-gap: 24px;
     row-gap: 48px;
 }
-.flex-element-list:hover,
-.flex-element-list:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+
    
 .flex-element-list {     
     width: calc((100% - 48px) / 3); 
     display: block;
 }
+.flex-element-link {
+    display: block;
+}
+.flex-element-link:hover,
+.flex-element-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .flex-element {    
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
